--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -1,107 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".TelaLogin">
 
     <TextView
         android:id="@+id/txt_TextoLOGIN"
-        android:layout_width="274dp"
+        android:layout_width="match_parent"
         android:layout_height="96dp"
         android:text="@string/txt_TextoLOGIN"
         android:textAlignment="center"
         android:textColor="#FF0000"
         android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.43"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.193" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txt_TextoLOGIN_usuario"
-        android:layout_width="101dp"
+        android:layout_width="match_parent"
         android:layout_height="64dp"
         android:text="@string/txt_TextoLOGIN_usuario"
         android:textColor="#FF0000"
         android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.116"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.415" />
-
-    <TextView
-        android:id="@+id/txt_TextoLOGIN_SENHA"
-        android:layout_width="94dp"
-        android:layout_height="77dp"
-        android:text="@string/txt_TextoLOGIN_SENHA"
-        android:textColor="#FF0000"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.113"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.642" />
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/edt_LOGIN_usuario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/edt_LOGIN_usuario"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.14"
-        app:layout_constraintStart_toEndOf="@+id/txt_TextoLOGIN_usuario"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.392" />
+        android:text="@string/edt_LOGIN_usuario" />
+
+    <TextView
+        android:id="@+id/txt_TextoLOGIN_SENHA"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:text="@string/txt_TextoLOGIN_SENHA"
+        android:textColor="#FF0000"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/edt_LOGIN_senha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/edt_LOGIN_senha"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.29"
-        app:layout_constraintStart_toEndOf="@+id/txt_TextoLOGIN_SENHA"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.597" />
+        android:text="@string/edt_LOGIN_senha" />
 
     <Button
         android:id="@+id/btn_LOGIN_entrar"
-        android:layout_width="164dp"
-        android:layout_height="72dp"
-        android:layout_marginEnd="36dp"
-        android:text="@string/btn_LOGIN_entrar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_LOGIN_senha"
-        app:layout_constraintVertical_bias="0.7" />
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:text="@string/btn_LOGIN_entrar" />
 
     <Button
         android:id="@+id/btn_LOGIN_voltar"
-        android:layout_width="110dp"
-        android:layout_height="72dp"
-        android:layout_marginBottom="60dp"
-        android:text="@string/btn_LOGIN_voltar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_LOGIN_entrar"
-        app:layout_constraintHorizontal_bias="0.356"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_TextoLOGIN_SENHA"
-        app:layout_constraintVertical_bias="0.99" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:text="@string/btn_LOGIN_voltar" />
+</LinearLayout>
