--- a/app/src/main/res/layout/activity_tela_painel_controle.xml
+++ b/app/src/main/res/layout/activity_tela_painel_controle.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="15px"
     tools:context=".TelaPainelControle">
 
     <TextView
@@ -67,3 +75,4 @@
         app:backgroundTint="#020202" />
 
 </LinearLayout>
+</ScrollView>
